# IdleScreen

./: CMakeLists.txt  README.md
include/: BlackOverlay.h  overlay.h
src/: BlackOverlay.cpp  main.cpp  resources.rc
src/linux/: overlay_linux.cpp
src/win/: BlackOverlay_win.cpp  overlay_win.cpp
